# rag-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
rag_demo/: main.py  simple.py
