[tool.poetry]
name = "rag-demo"
version = "0.1.0"
description = ""
authors = ["pinstinct <contact@limhm.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.15"
langchain-community = "^0.2.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
